Fix status overflow issue *and* scroll bar

--- a/app/styles/components/status.scss
+++ b/app/styles/components/status.scss
@@ -126,9 +126,12 @@
   vertical-align: middle;
 }
 
+.status-container {
+  padding-bottom: 10px;
+}
+
 .status__wrapper {
   @include standard-panel;
-  margin-bottom: 10px;
   padding: 15px 0 10px;
 }
 
